# HydraBFlow

./: .gitignore  CLAUDE.md  README.md  data  data_jarvis  new_constrains.md  pyproject.toml  summary_stats_extentions.md
assets/: terminal_velocity.csv
assets/gaia/: M68_track.npz  NGC3201_track.npz  Pal5_track.npz  README.md  apjad382dt1_mrt.txt  (+5 more)
conf/: config.yaml
docs/: bring_your_own_data.md  configuration.md  end_to_end_guide.md  hyperparameter_tuning.md  two_moons_pipeline.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
scripts/: _ibata_grid_select.py  compare_spray_methods.py  corner_parameters.py  create_ibata_dataset.sh  create_ibata_m200c_dataset.sh  create_ibata_onedisk_beta3_dataset.sh  create_ibata_rnbody_m200c_10kstars_test.sh  create_ibata_rnbody_m200c_dataset.sh  create_rnbody_huang_dataset.sh  diagnose_mass_prior.py  eval_rnbody_huand_dataset_kde_prior.sh  extend_vcirc_huang.py  misspecification_per_channel.py  mmd_potential_vs_training.py  mmd_stream_vs_training.py  optuna_results.py  ppc_ancillary_observables.py  ppc_ancillary_posterior.py  ppc_posterior_summary_statistics.py  ppc_prior_predictive.py  ppc_rotation_curve.py  ppc_rotation_curve_ibata.py  ppc_summary_statistics.py  probe_vcirc_acceptance.py  report_cross_model_tension.py  simulate_multistream.py  sumstat_sim_vs_real.py  train_eval_base_cpu.sh  train_ibata.sh  train_ibata_m200c.sh  train_ibata_onedisk_grid.sh  train_ibata_sumstats.sh  train_ibata_wdisk_beta3.sh  training_eval_agama_1e6.sh  training_eval_missing_vlos_ablation.sh  training_eval_rnbody_huand_dataset copy.sh  training_eval_rnbody_huand_dataset.sh  training_eval_summary_stats.sh  tsne_summaries.py  tune_ibata_m200c.sh  (+4 more)
tests/: conftest.py  test_ancillary_observables.py  test_augmentation.py  test_config.py  test_m200c_halo.py  test_masked_vlos.py  test_misspecification.py  test_oom_backoff.py  test_registries.py  test_stream_summary.py  test_streams.py  test_workflow.py
(+181 files in other folders)
