[project]
name = "hydrabflow"
version = "0.1.0"
description = "Reusable cookiecutter template for BayesFlow + Hydra simulation-based inference (SBI) pipelines."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Giuseppe Viterbo", email = "viterbogiuseppe99@gmail.com" }]
dependencies = [
    "bayesflow>=2.0",
    "keras>=3.5",
    "jax[cuda12]>=0.4.30",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "optuna>=3.6",
    "numpy>=1.26",
    "autocvd",
    "matplotlib>=3.8",
    "marimo>=0.9",
    "tqdm>=4.66",
    "gpustat",
    "astropy>=8.0.0",
    "joblib>=1.5.3",
    "scipy>=1.17.1",
    "pandas>=3.0.3",
    "agama>=1.0.0",
]

# `uv sync` installs the dev group by default, so a fresh clone can run pytest immediately.
# setuptools/wheel are needed in the project env because agama builds without isolation (below).
[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "setuptools", "wheel"]

# Console entry points mirror the scripts/ Hydra apps.
[project.scripts]
hydrabflow-simulate = "hydrabflow.pipeline.simulate:cli"
hydrabflow-simulate-multistream = "hydrabflow.pipeline.simulate_multistream:cli"
hydrabflow-train = "hydrabflow.pipeline.train:cli"
hydrabflow-evaluate = "hydrabflow.pipeline.evaluate:cli"
hydrabflow-evaluate-real = "hydrabflow.pipeline.evaluate_real:cli"
hydrabflow-tune = "hydrabflow.pipeline.tune:cli"

# agama's setup.py imports numpy at build time, so it cannot build in an isolated env, and its
# interactive build prompts (download GSL/Eigen, reuse Makefile.local) need auto-confirmation.
[tool.uv]
no-build-isolation-package = ["agama"]

[tool.uv.config-settings-package]
agama = { "--build-option" = "--yes" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hydrabflow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
